import "Timestamp.proto";
import "Documents/Document.proto";
import "Docflow/AttachmentV3.proto";
import "Docflow/Attachment.proto";
import "Docflow/ResolutionDocflowV3.proto";
import "DocflowStatusV3.proto";
import "Docflow/DocumentInfoV3.proto";
import "DocumentId.proto";
import "Docflow/UniversalMessageAttachmentDocflow.proto";
import "Docflow/DocflowV3.proto";
import "Docflow/LastEvent.proto";

package Diadoc.Api.Proto.Docflow;

message RevocationDocflowV4
{
    required bool IsFinished = 1;
    required RevocationRequestDocflow RevocationRequest = 2;
    optional RevocationResponseDocflowV4 RevocationResponse = 3;
    required string InitiatorBoxId = 4;
    required Documents.RevocationStatus RevocationStatus = 5;
    optional ResolutionEntitiesV3 ResolutionEntities = 6;
    repeated OuterDocflowEntities OuterDocflowEntities  = 7;
}
 
message RevocationResponseDocflowV4
{
    optional SignatureV3 RecipientSignature = 1;
    optional SignatureRejectionDocflowV4 SignatureRejection = 2;
}
 
message ParticipantResponseDocflowV4
{
    required bool IsFinished = 1;
    optional SignatureV3 Signature = 2;
    optional SignedAttachmentV3 Title = 3;
    optional SignatureRejectionDocflowV4 Rejection = 4;
    optional Timestamp SentAt = 5;
    optional Timestamp DeliveredAt = 6;
    required Documents.RecipientResponseStatus ResponseStatus = 7;
    optional ConfirmationDocflowV4 Confirmation = 8;
}

message SignatureRejectionDocflowV4
{
    optional SignedAttachmentV3 SignatureRejection = 1;
    required bool IsFormal = 2;
    optional Timestamp DeliveredAt = 3;
    optional string PlainText = 4;
    optional UniversalMessageAttachmentDocflow UniversalMessage = 5;
}

message AmendmentRequestDocflowV4
{
    required bool IsFinished = 1;
    optional SignedAttachmentV3 AmendmentRequest = 2;
    optional Timestamp SentAt = 3;
    optional Timestamp DeliveredAt = 4;
    optional ReceiptDocflowV4 Receipt = 5;
    required int32 AmendmentFlags = 6;
    optional string PlainText = 7;
    optional ConfirmationDocflowV4 ConfirmationDocflow = 8;
    optional UniversalMessageAttachmentDocflow UniversalMessage = 9; 
}

message ReceiptDocflowV4
{
    required bool IsFinished = 1;
    optional SignedAttachmentV3 ReceiptAttachment = 2;
    optional Timestamp SentAt = 3;
    optional Timestamp DeliveredAt = 4;
    optional ConfirmationDocflowV4 Confirmation = 5;
    required Documents.GeneralReceiptStatus Status = 6;
    optional UniversalMessageAttachmentDocflow UniversalMessage = 7;
}

message ConfirmationDocflowV4
{
    required bool IsFinished = 1;
    optional SignedAttachmentV3 ConfirmationAttachment = 2;
    optional Timestamp ConfirmedAt = 3;
    optional ReceiptDocflowV4 Receipt = 4;
    optional OperatorConfirmationDocflow RoamingConfirmation = 5;
}

 
message DocflowV4
{
    required SenderTitleDocflow SenderTitle = 1;
    optional ConfirmationDocflowV4 Confirmation = 2;
    optional ParticipantResponseDocflowV4 ProxyResponse = 11;
    optional ReceiptDocflowV4 RecipientReceipt = 4;
    optional ParticipantResponseDocflowV4 RecipientResponse = 5;
    optional AmendmentRequestDocflowV4 AmendmentRequest = 6;
    optional RevocationDocflowV4 Revocation = 7;
    optional ReceiptDocflowV4 SenderReceipt = 8;
    optional ResolutionDocflowV3 Resolution = 9;
    optional ResolutionEntitiesV3 ResolutionEntities = 10;
    repeated OuterDocflow OuterDocflows = 12;
    repeated OuterDocflowEntities OuterDocflowEntities = 13;
    required DocflowStatusV3 DocflowStatus = 14;
    optional TtGisFixationDocflow TtGisFixation = 15;
}